# ray-tracing

./: CMakeLists.txt  Entity.cpp  Entity.h  HeatMap.cpp  HeatMap.h  Picture.cpp  Picture.h  README.md  Scene.cpp  Scene.h  f1.ppm  f2.ppm  main.cpp
Aspect/: Aspect.cpp  Aspect.h  Color.cpp  Color.h  RGB.cpp  RGB.h
Camera/: Camera.cpp  Camera.h  RealCamera.cpp  RealCamera.h  SimpleCamera.cpp  SimpleCamera.h
Geometry/: Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Light/: Light.cpp  Light.h  SimpleLight.cpp  SimpleLight.h
Object/: Ball.cpp  Ball.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Object.cpp  Object.h  Object2D.cpp  Object2D.h
Renderer/: Renderer.cpp  Renderer.h
Surface/: Circle.cpp  Circle.h  OpenCylinder.cpp  OpenCylinder.h  Polygon.cpp  Polygon.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  Surface.cpp  Surface.h
Utils/: Matrix.cpp  Matrix.h
Utils/BaseGeometry/: Constants.h  UnitVector3.cpp  UnitVector3.h  Values.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Utils/Geometry/: Basis.cpp  Basis.h  Line.cpp  Line.h  ReferenceFrame.cpp  ReferenceFrame.h  UnitVector3.cpp  UnitVector3.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Utils/TimeGeometry/: TimeFunction.cpp  TimeFunction.h  TimeUnitVector3.cpp  TimeUnitVector3.h  TimeVector2.cpp  TimeVector2.h  TimeVector3.cpp  TimeVector3.h
